lustre-collector/src/oss/snapshots/lustre_collector__oss__job_stats__tests__with_time_triple.snap
---
source: src/oss/job_stats.rs
expression: "serde_yaml::from_str::<JobStatsOst>(x).unwrap()"
---
JobStatsOst {
    job_stats: Some(
        [
            JobStatOst {
                job_id: "lfs.0.",
                snapshot_time: UnsignedLustreTimestamp(
                    1686153914643,
                ),
                start_time: Some(
                    UnsignedLustreTimestamp(
                        1686153914643,
                    ),
                ),
                elapsed_time: Some(
                    "0.000003398 secs.nsecs",
                ),
                read_bytes: BytesStat {
                    samples: 0,
                    unit: "bytes",
                    min: 0,
                    max: 0,
                    sum: 0,
                },
                write_bytes: BytesStat {
                    samples: 0,
                    unit: "bytes",
                    min: 0,
                    max: 0,
                    sum: 0,
                },
                getattr: ReqsStat {
                    samples: 0,
                    unit: "usecs",
                },
                setattr: ReqsStat {
                    samples: 0,
                    unit: "usecs",
                },
                punch: ReqsStat {
                    samples: 0,
                    unit: "usecs",
                },
                sync: ReqsStat {
                    samples: 0,
                    unit: "usecs",
                },
                destroy: ReqsStat {
                    samples: 0,
                    unit: "usecs",
                },
                create: ReqsStat {
                    samples: 0,
                    unit: "usecs",
                },
                statfs: ReqsStat {
                    samples: 1,
                    unit: "usecs",
                },
                get_info: ReqsStat {
                    samples: 0,
                    unit: "usecs",
                },
                set_info: ReqsStat {
                    samples: 0,
                    unit: "usecs",
                },
                quotactl: ReqsStat {
                    samples: 0,
                    unit: "usecs",
                },
            },
        ],
    ),
}
